@@ -1,26 +1,25 @@
 package com.autohubreactive.apigateway.util;
 
 import com.autohubreactive.exception.AutoHubException;
-import com.fasterxml.jackson.core.JsonProcessingException;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.datatype.jsr310.JavaTimeModule;
+import tools.jackson.databind.ObjectMapper;
 import lombok.experimental.UtilityClass;
+import tools.jackson.core.JacksonException;
 
 import java.io.IOException;
 import java.net.URISyntaxException;
 import java.net.URL;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 @UtilityClass
 public class TestUtil {
 
-    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper().registerModule(new JavaTimeModule());
+    private static final ObjectMapper OBJECT_MAPPER = new ObjectMapper();
 
     public static <T> T getResourceAsJson(String resourceName, Class<T> valueType) {
         try {
             return OBJECT_MAPPER.readValue(getResourceAsString(resourceName), valueType);
-        } catch (JsonProcessingException e) {
+        } catch (JacksonException e) {
             throw new AutoHubException("Failed getting resource: " + resourceName + ", cause: " + e.getMessage());
         }
     }
@@ -33,7 +32,7 @@ public class TestUtil {
         }
 
         try {
-            return new String(Files.readAllBytes(Paths.get(resource.toURI())));
+            return new String(Files.readAllBytes(Path.of(resource.toURI())));
         } catch (IOException | URISyntaxException e) {
             throw new AutoHubException("Failed getting resource: " + resourceName);
         }
